Added server-side Handlebars support.

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,15 +3,17 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
-<title>Node.js Starter Kit</title>
+<title>{{title}}</title>
 <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
 
-<h1>Node.js Starter Kit</h1>
+<h1>{{title}}</h1>
 
-<script src="bower_components/requirejs/require.js" data-main="js/main"></script>
+{{content}}
+
+<script src="/bower_components/requirejs/require.js" data-main="/js/main"></script>
 
 </body>
 </html>
