Added async attribute to requirejs script tag.

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,7 +13,7 @@
 
 {{content}}
 
-<script src="/bower_components/requirejs/require.js" data-main="/js/config"></script>
+<script src="/bower_components/requirejs/require.js" data-main="/js/config" async></script>
 
 </body>
 </html>
