--- a/templates/template.hbs
+++ b/templates/template.hbs
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <title>{{title}}</title>
-<link rel="stylesheet" type="text/css" href="/css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
