--- a/src/views/template.hbs
+++ b/src/views/template.hbs
@@ -11,7 +11,8 @@
 
 {{{body}}}
 
-{{!-- <script src="/bower_components/requirejs/require.js" data-main="/js/config" async></script> --}}
+<!-- <script src="/bower_components/requirejs/require.js" data-main="/js/config" async></script> -->
+<!-- <script src="/js/build.min.js" async></script> -->
 
 </body>
 </html>
