--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,28 +1,2 @@
-* {
-    margin: 0; padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-body {
-    margin: 1em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    font-size: 1em;
-    line-height: 1.3em;
-}
-
-h1 {
-    font-weight: normal;
-    line-height: 1.3em;
-}
-
-a {
-    color: #00f;
-}
-
-pre {
-    font-family: 'Monaco', monospace;
-    font-size: 0.8em;
-    line-height: 1.3em;
-}
+@import "mixins";
+@import "base";
