Changed config key to site_name.
Added site_name to main template.

--- a/src/views/template.hbs
+++ b/src/views/template.hbs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
-<title>{{title}}</title>
+<title>{{#if page_title}}{{page_title}} &mdash; {{/if}}{{config.site_name}}</title>
 <link rel="stylesheet" href="/css/styles.css">
 </head>
 
