Added example usage of Handlebars to client side app script.

--- a/src/views/template.hbs
+++ b/src/views/template.hbs
@@ -11,7 +11,7 @@
 
 {{{body}}}
 
-<!-- <script src="/bower_components/requirejs/require.js" data-main="/js/config" async></script> -->
+<script src="/bower_components/requirejs/require.js" data-main="/js/config" async></script>
 <!-- <script src="/js/build.min.js" async></script> -->
 
 </body>
