--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -5,15 +5,15 @@
 }
 
 body {
-    margin: 1em;
+    margin: 1rem;
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 1em;
-    line-height: 1.3em;
+    line-height: 1.3;
 }
 
 h1 {
     font-weight: normal;
-    line-height: 1.3em;
+    line-height: 1.3;
 }
 
 a {
